--- a/PrintInformation/PrintPage.html
+++ b/PrintInformation/PrintPage.html
@@ -32,7 +32,7 @@
 
 <body>
   <title> Print Page: </title>
-  <img src="quiz.png" alt="Quiz Image">
+  <img src="data.png" alt="Quiz Image">
   <div id="result"></div>
   <script type="text/javascript">
     var x;
